# RGE

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
cmake/: build-docs.cmake  rge-config.cmake.in  version.cpp.in
example/: CMakeLists.txt  example.cpp
include/RGE/: version.h
src/: CMakeLists.txt
test/: CMakeLists.txt  test_rge.cpp  test_version.h
